--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer components {
+    body {
+        scroll-behavior: smooth;
+        overflow-x: hidden;
+    }
     .png-container {
         overflow: hidden;
     }
@@ -16,15 +20,5 @@
         background: #7f5539b3;
     }
 
-    .anim-fadein {
-        opacity:  0;
-        animation: anim-fadein linear;
-        animation-timeline: view();
-        animation-range-start: contain 30vh;
-        animation-range-end: contain 85vh;
-    }
-
-    @keyframes anim-fadein {
-        to {opacity: 1;}
-    }
+    
 }
