--- a/src/index.css
+++ b/src/index.css
@@ -20,5 +20,9 @@
         background: #7f5539e8;
     }
 
+    .shadow-top {
+        box-shadow: 0px -10px 18px 18px rgba(0, 0, 0, 0.354);
+        
+    }
     
 }
