--- a/src/index.css
+++ b/src/index.css
@@ -24,5 +24,9 @@
         box-shadow: 0px -10px 18px 18px rgba(0, 0, 0, 0.354);
         
     }
+
+    .bg-glass {
+        background: #ffffff58;
+    }
     
 }
