add: 2 more reviews and background image

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
     body {
         scroll-behavior: smooth;
         overflow-x: hidden;
+        background-image: url(../public/assets/coffee-background.webp);
+        background-attachment: fixed;
     }
     .png-container {
         overflow: hidden;
@@ -26,7 +28,7 @@
     }
 
     .bg-glass {
-        background: #ffffff58;
+        background: #ffffff73;
     }
     
 }
