--- a/src/index.css
+++ b/src/index.css
@@ -30,5 +30,9 @@
     .bg-glass {
         background: #ffffff73;
     }
+
+    .transition-opacity {
+        transition: opacity 0.5s ease-in-out; /* Adjust duration as needed */
+    }
     
 }
